<resources>
<string name="app_name">Cameralibrary</string>
<string name="back">Back</string>
<string name="plz_input_cur_wifi_pw">Input Wifi Password</string>
<string name="search_device">Searching</string>
<string name="use_other_wifi">Other Wifi</string>
<string name="complete">Complete</string>
<string name="name">Name</string>
<string name="online">●Getting Status…</string>
<string name="down">Down</string>
<string name="up">Up</string>
<string name="str_ok">Sure</string>
<string name="str_cancel">Cancel</string>
<string name="exit_alert">Confirm Exit ?</string>
<string name="password">Password:</string>
<string name="showpwd">Display password</string>
<string name="connected"> Connected </string>
<string name="pwd_no_empty"> Password can not be empty </string>
<string name="sensorlist_addnewdevice"> Add new device </string>
<string name="sensor_list_sensor"> Sensor </string>
<string name="sensorlist_havedevice"> Device you added </string>
<string name="add_sensor_infrerad_desc"> Infrared is the use of thermal effects of infrared radiation, detect whether there are people or animals through. </string>
<string name="add_sensor_gas_desc"> Air is detected by the gas sensor combustible gas in the surrounding environment is more than safety. </string>
<string name="add_sensor_smoke_desc"> Smoke detection is achieved by monitoring the concentration of smoke. </string>
<string name="add_sensor_control_desc"> Wireless remote control is a device used to remotely control the machine. </string>
<string name="add_sensor_siren_desc"> Siren can receive remote control, wireless door sensor, wireless infrared sensor alarm signal </string>
<string name="add_sensor_door_desc"> The magnet is used to detect whether the door, window, drawer, etc. are illegally opened or moved. </string>
<string name="sensor_type_door"> Door magnet </string>
<string name="sensor_type_infrared"> Infrared </string>
<string name="sensor_type_smoke"> Smoke </string>
<string name="sensor_type_siren"> Siren </string>
<string name="sensor_type_gas"> Air feeling </string>
<string name="sensor_type_remote"> Remote </string>
<string name="sensor_type_camera"> Camera </string>
<string name="sensor_type_curtain"> Curtain </string>
<string name="pppp_status_initialing"> Connected, initializing </string>
<string name="connecting"> Connecting ... </string>
<string name="device_type_name"> Type: </string>
<string name="pppp_status_unknown"> Unknown state </string>
<string name="pppp_status_connecting"> Connecting </string>
<string name="pppp_status_online"> Online </string>
<string name="pppp_status_disconnect"> Disconnected </string>
<string name="pppp_status_connect_failed"> Connection failed </string>
<string name="pppp_status_pwd_error"> Password error </string>
<string name="pppp_status_invalid_id"> Invalid ID number </string>
<string name="device_not_on_line"> Camera is offline </string>
<string name="pppp_status_connect_timeout"> Connection timeout </string>
<string name="done"> Done </string>
<string name="main_select_all"> Select all </string>
<string name="main_select_reverse"> Negative </string>
<string name="main_show_back"> Press again to exit the video! </string>
<string name="right"> To the right </string>
<string name="left"> Left </string>
<string name="searching_tip"> Searching, please wait ... </string>
<string name="alerm_setting"> Alarm Settings </string>
<string name="sdcard_getparams"> Retrieving SDCard information ... </string>
<string name="sdcard_total"> Total SD card capacity (M): </string>
<string name="sdcard_remain"> SD card remaining amount (M): </string>
<string name="sdcard_state"> SD card status: </string>
<string name="sdcard_format"> Format </string>
<string name="sdcard_inserted"> SD card inserted </string>
<string name="sdcard_video"> Recording ... </string>
<string name="sdcard_file_error"> File system error </string>
<string name="sdcard_isformatting"> SD card is formatting ... </string>
<string name="sdcard_status_info"> No card or formatting required </string>
<string name="sdcard_coverage"> Video overrides: </string>
<string name="sdcard_recordlength"> Recording duration (minutes): </string>
<string name="sdcard_recordtime"> Timing recording: </string>
<string name="sdcard_range"> Range 5-180 </string>
<string name="sdcard_set_failed"> SD card setup failed </string>
<string name="sdcard_set_success"> SD card set successfully </string>
<string name="sdcard_formatsd"> It takes 30 seconds to format the SD card, is it formatted? </string>
<string name="wifi_manager"> Manage WiFi Network </string>
<string name="wifi_signal_strong"> Signal strength: </string>
<string name="wifi_safe"> Security: </string>
<string name="wifi_no_safe"> None </string>
<string name="wifi_set_failed"> WiFi setup failed </string>
<string name="wifi_set_success"> WiFi setup is successful, camera is rebooting ... </string>
<string name="wifi_not_connected"> not connected </string>
<string name="wifi_scanning"> WiFi is scanning, please wait ... </string>
<string name="wifi_scan_failed"> WiFi scan failed </string>
<string name="wifi_getparams"> Getting WiFi info ... </string>
<string name="wifi_notchange"> WiFi has not changed, there is no need to set </string>
<string name="user_set_failed"> User setting failed </string>
<string name="user_set_success"> User set successfully, camera is restarting </string>
<string name="user_getparams"> Retrieving user info ... </string>
<string name="alerm_detector_layout"> Motion Detection Arming </string>
<string name="alerm_detector_sensitivity"> Motion detection sensitivity </string>
<string name="alerm_io_layout"> Alarm Input Arming </string>
<string name="alerm_trigger_level">Trigger level </string>
<string name="alerm_presetsit"> Preset alarm linkage </string>
<string name="alerm_audio_level"> Sound Detection Arming </string>
<string name="alerm_audio_sensitivity"> Sensitivity </string>
<string name="alerm_io_move"> IO linkage after alarm </string>
<string name="alerm_ioout_level"> Output level </string>
<string name="alerm_trigger_event"> Alarm trigger event </string>
<string name="alerm_set_failed"> Alarm setting failed </string>
<string name="setting_aler_sucess"> Alarm set successfully </string>
<string name="alerm_audio_levelhigh"> High sensitivity </string>
<string name="alerm_audio_levelmiddle"> Sensitivity </string>
<string name="alerm_audio_levellow"> Low sensitivity </string>
<string name="alerm_ioin_levelhight"> High </string>
<string name="alerm_audio_levelforbid"> Prohibit detection </string>
<string name="alerm_ioin_levellow"> Low </string>
<string name="alerm_getparams"> Getting alarm info ... </string>
<string name="alerm_preset_no"> None </string>
<string name="alerm_motion_alarm"> Motion detection alarm </string>
<string name="alerm_gpio_alarm"> IO linkage alarm </string>
<string name="takepicture_time"> Time: </string>
<string name="picture_sum"> Zhang </string>
<string name="video_sum"> </string>
<string name="sum_pic"> Total: </string>
<string name="local_video_date"> Recording time: </string>
<string name="local_video_badfile"> The file is corrupt </string>
<string name="no_video"> No remote recording files! </string>
<string name="remote_video_getparams"> Getting remote recording info ... </string>
<string name="ptz_takepic_ok"> Camera successful </string>
<string name="ptz_takepic_fail"> Photo failed </string>
<string name="ptz_default_vedio_params"> Default video parameter recovery </string>
<string name="ptz_takepic_save_fail"> The device does not have an SDCard and the photo has failed to save </string>
<string name="ptz_takevideo_begin"> Start recording </string>
<string name="ptz_takevideo_end"> End of recording </string>
<string name="delete_camera"> Delete </string>
<string name="plan_video"> Schedule Recording </string>
<string name="move_video"> Motion detection video </string>
<string name="plan_day_1"> Monday </string>
<string name="plan_day_2"> Tuesday </string>
<string name="plan_day_3"> Wednesday </string>
<string name="plan_day_4"> Thursday </string>
<string name="plan_day_5"> Friday </string>
<string name="plan_day_6"> Saturday </string>
<string name="plan_day_7"> Sunday </string>
<string name="camera_defense_addsave"> Save </string>
<string name="camera_defense_starttime"> Start time </string>
<string name="camera_defense_endtime"> End time </string>
<string name="add_valid_time"> Add period </string>
<string name="edit_valid_time"> Edit period </string>
<string name="defense_nodate"> Please select week </string>
<string name="del_ok"> Confirm delete? </string>
<string name="plug_one"> 0ne </string>
<string name="plug_two"> Two </string>
<string name="plug_three"> Three </string>
<string name="plug_four"> Four </string>
<string name="plug_five"> Five </string>
<string name="plug_six"> Six </string>
<string name="plug_seven"> Day </string>
<string name="no_empty"> Content can not be empty </string>
<string name="has_added"> This camera has been added! </string>
<string name="notic_come"> Doorbell is coming </string>
<string name="camera_alarm"> Camera alarm </string>
<string name="judge_ps"> Password check </string>
<string name="input_camera_ps"> Please enter the camera password </string>
<string name="rename"> Rename </string>
<string name="del_camera"> Delete camera </string>
<string name="complete01"> Done </string>
<string name="add_by_wifi"> WIFI SmartClock (not networked) </string>
<string name="add_by_udp"> LAN scanning (networked) </string>
<string name="add_by_zxing"> QR code scanning (networked) </string>
<string name="save_time"> Save time: </string>
<string name="sure_del_video"> Delete this video? </string>
<string name="cancel"> cancel </string>
<string name="sure"> OK </string>
<string name="wating"> Working, please wait ... </string>
<string name="del_fail"> Delete failed! </string>
<string name="now_version"> Current version </string>
<string name="getting_version"> Retrieving server version, please wait ... </string>
<string name="new_version"> Latest version </string>
<string name="check_has_update"> New system firmware detected, updated? </string>
<string name="no_update_now"> Temporarily not updating </string>
<string name="restarting"> Updating system firmware, camera will restart later ... </string>
<string name="update"> Update </string>
<string name="getting_versioning"> Retrieving version info ... </string>
<string name="cannot_update"> Incomplete information, unable to upgrade </string>
<string name="no_need_update"> As of version information, there is no need to upgrade </string>
<string name="video_empty"> Local video is empty! </string>
<string name="local_video"> Local video </string>
<string name="exit_camera"> Exit camera interface </string>
<string name="no_connected"> Please connect again after the operation! </string>
<string name="look_local_video"> View local video </string>
<string name="look_remote_video"> View Remote Video </string>
<string name="del_fail01"> Delete failed! </string>
<string name="ir_on"> IR on </string>
<string name="ir_off"> IR off </string>
<string name="more_video"> Get more video files ... </string>
<string name="load_complete"> Already loaded </string>
<string name="title_img"> Picture list </string>
<string name="yun_camera"> Cloud camera </string>
<string name="video_list"> Video list </string>
<string name="add_camera"> Ddd camera </string>
<string name="dev_code"> Device number: </string>
<string name="input_dev_code"> Please enter the device number </string>
<string name="uesrname_1"> Username: </string>
<string name="dev_ps"> Device password: </string>
<string name="rescan"> Rescan </string>
<string name="title"> Title </string>
<string name="no_camera"> There is currently no camera, you can </string>
<string name="add_camera_1"> Add camera </string>
<string name="change_ps_1"> Change password </string>
<string name="admin"> Administrator: </string>
<string name="ps"> Password: </string>
<string name="add_time"> Add period </string>
</resources>