<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.lmiot.tiblebarlibrary.LmiotTitleBar
        android:id="@+id/id_lmiot_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tv_title="@string/change_ps_1"
        app:show_iv_menu="false"
        app:show_tv_menu="true"
        app:tv_menu="@string/complete"
        app:iv_back="@drawable/title_back"
        app:titlebar_bg="@color/colorAccent"
        app:text_color_title="@color/white"
        app:text_color_menu="@color/white"
        app:show_line="true"
        />


          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
              >

              <TextView
                android:id="@+id/textView0"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:text="@string/admin" />
              <EditText
                android:id="@+id/edit_name"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:background="@null"
                  />

 			</LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/d6_gray"/>

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
              android:paddingLeft="20dp"
              >

              <TextView
                android:id="@+id/textView1"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:text="@string/ps" />
              <EditText
                android:id="@+id/edit_pwd"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:background="@null"
                  />

 			</LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/d6_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        >
        <CheckBox
            android:id="@+id/cbox_show_pwd"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/color_black"
            android:text="@string/showpwd"
            android:textSize="15sp"
            />
    </LinearLayout>


</com.zhy.android.percent.support.PercentLinearLayout>