<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >


    <com.lmiot.tiblebarlibrary.LmiotTitleBar
        android:id="@+id/id_lmiot_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tv_title="@string/add_time"
        app:tv_menu="@string/complete"
        app:show_iv_menu="false"
        app:show_tv_menu="true"
        app:iv_back="@drawable/title_back"
        app:iv_menu="@drawable/add"
        app:titlebar_bg="@color/colorAccent"
        app:text_color_title="@color/white"
        app:text_color_menu="@color/white"
        app:show_line="true"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/timing_textView1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/color_alarm_textcolor"
                        android:textSize="18sp" />

                    <TimePicker
                        android:id="@+id/timing_timePicker1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:timePickerMode="spinner"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/timing_textView2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:textColor="@color/color_alarm_textcolor"
                        android:textSize="18sp" />

                    <TimePicker
                        android:id="@+id/timing_timePicker2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:timePickerMode="spinner"
                        />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/camera_defense_divider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/timing_id1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_day_1"
                    android:textColor="@color/color_alarm_textcolor"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/timing_id2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center_horizontal"
                       android:text="@string/plan_day_2"
                    android:textColor="@color/color_alarm_textcolor"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/timing_id3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center_horizontal"
                       android:text="@string/plan_day_3"
                    android:textColor="@color/color_alarm_textcolor"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/timing_id4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_day_4"
                    android:textColor="@color/color_alarm_textcolor"
                    android:textSize="18sp" />

                
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >
				<CheckBox
                    android:id="@+id/timing_id5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_day_5"
                    android:textColor="@color/color_alarm_textcolor"
                    android:textSize="18sp" />
                <CheckBox
                    android:id="@+id/timing_id6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center_horizontal"
                        android:text="@string/plan_day_6"
                    android:textColor="@color/color_alarm_textcolor"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/timing_id7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_day_7"
                    android:textColor="@color/color_alarm_textcolor"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/timing_eatid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center_horizontal"
                    android:textSize="18sp"
                    android:visibility="invisible" />

               

            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/camera_defense_divider" />

            <LinearLayout
                android:id="@+id/timing_edit_layout"
                android:layout_marginTop="50dp"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/cache_color_hint"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/timing_start_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/add_defense_1"
                        android:text="@string/delete_camera"
                        android:textColor="@color/color_white"
                        android:textSize="20sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/timing_start_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/add_defense_0"
                        android:text="@string/camera_defense_addsave"
                        android:textColor="@color/color_alarm_textcolor"
                        android:textSize="20sp" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</com.zhy.android.percent.support.PercentLinearLayout>